ERA-9693: Fix issue with small containers truncating menus

--- a/src/SideBar/styles.module.scss
+++ b/src/SideBar/styles.module.scss
@@ -197,10 +197,6 @@
       visibility: visible;
     }
   }
-
-  [class*=tab-content] {
-    height: unset;
-  }
 }
 
 .header {
